--- a/synthetic_data.ipynb
+++ b/synthetic_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -21,25 +21,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (experiments.py, line 10)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/Users/thomas/Documents/github/paris/experiments.py\"\u001b[0;36m, line \u001b[0;32m10\u001b[0m\n\u001b[0;31m    from scikit-learn import adjusted_mutual_info_score as ami\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from paris import paris\n",
-    "from louvain import louvain\n",
-    "from hierarchy import top_clusterings\n",
-    "from synthetic_data import hsbm\n",
-    "from plot_tools import plot_results, plot_resolution, plot_dendrogram, plot_clusterings\n",
-    "from experiments import experiment_nb, experiment_deg, experiment_het"
+    "from paris.algorithms.paris import paris\n",
+    "from paris.algorithms.louvain import louvain\n",
+    "from paris.algorithms.hierarchy import top_clusterings\n",
+    "\n",
+    "from paris.experiments.synthetic_data import sbm, hsbm\n",
+    "from paris.experiments.plot_tools import plot_results, plot_resolution, plot_dendrogram, plot_clusterings\n",
+    "from paris.experiments.experiments import experiment_nb, experiment_deg, experiment_het"
    ]
   },
   {
@@ -71,9 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "xlabel = \"Number of blocks\"\n",
@@ -84,9 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plot_results(range_, range_, results_nb, xlabel)"
@@ -102,22 +90,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "xlabel = \"Mean external degree\"\n",
-    "range_ = range(1,6)\n",
+    "range_ = range(1,11)\n",
     "results_deg = experiment_deg(nb_samples, range_)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plot_results(range_, len(range_) * [40], results_deg, xlabel)"
@@ -133,9 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "xlabel = \"Number of blocks\"\n",
@@ -147,9 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "nb_blocks_ = [len(block_size) * nb for nb in range_]\n",
@@ -168,18 +148,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "numbers = [20,4,4]\n",
     "parameters = [1,.1,.1]\n",
     "hsbm_model = hsbm(numbers, parameters)\n",
-    "G = hsbm_model.create_graph()\n",
+    "G = hsbm_model.generate_graph()\n",
     "while not nx.is_connected(G):\n",
     "    G = hsbm_model.create_graph()\n",
-    "pos = hsbm_model.pos()"
+    "pos = hsbm_model.position()"
    ]
   },
   {
@@ -192,9 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Paris\n",
@@ -228,12 +204,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plot_dendrogram(D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nodes = list(G.nodes())\n",
+    "C_list = top_clusterings(D, nodes, 2)\n",
+    "plot_clusterings(G, C_list, pos, width = 10, height = 10)"
    ]
   },
   {
@@ -243,11 +228,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "nodes = list(G.nodes())\n",
-    "C_list = top_clusterings(D, nodes, 2)\n",
-    "plot_clusterings(G, C_list, pos, width = 10, height = 10)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
