--- a/hierarchical_clustering.ipynb
+++ b/hierarchical_clustering.ipynb
@@ -44,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## HSBM experiments"
+    "## Synthetic data"
    ]
   },
   {
@@ -141,7 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Real Graphs experiments\n",
+    "## Real data\n",
     "\n",
     "The datasets are available [here](https://perso.telecom-paristech.fr/bonald/graphs/paris.zip)\n",
     "\n",
@@ -666,10 +666,10 @@
    ],
    "source": [
     "datasets = [\"openstreet\",\"openflights\",\"wikipedia_schools\",\"wikipedia_humans\"]\n",
-    "G = nx.read_graphml(datasets[2] + \".graphml\")\n",
+    "G = nx.read_graphml(datasets[3] + \".graphml\")\n",
     "\n",
     "# Mean running time in seconds\n",
-    "n_tests = 10\n",
+    "n_tests = 1\n",
     "print(test_algo(G,\"louvain\",n_tests))\n",
     "print(test_algo(G,\"paris\", n_tests))\n",
     "print(test_algo(G,\"spectral\",n_tests))"
