--- a/hierarchical_clustering.ipynb
+++ b/hierarchical_clustering.ipynb
@@ -176,7 +176,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "D = paris(G)"
@@ -468,7 +470,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "D = paris(G)"
@@ -666,10 +670,10 @@
    ],
    "source": [
     "datasets = [\"openstreet\",\"openflights\",\"wikipedia_schools\",\"wikipedia_humans\"]\n",
-    "G = nx.read_graphml(datasets[3] + \".graphml\")\n",
+    "G = nx.read_graphml(datasets[2] + \".graphml\")\n",
     "\n",
     "# Mean running time in seconds\n",
-    "n_tests = 1\n",
+    "n_tests = 10\n",
     "print(test_algo(G,\"louvain\",n_tests))\n",
     "print(test_algo(G,\"paris\", n_tests))\n",
     "print(test_algo(G,\"spectral\",n_tests))"
